# esp_node

./: Cargo.toml  README.md  diagram.json  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
scripts/: flash.sh
src/: main.rs
src/sensor/: bme280.rs  mod.rs  soil.rs
