[package]
name = "esp_node"
version = "0.2.0"
authors = ["Gergo"]
edition = "2021"

[dependencies]
hal = { package = "esp32-hal", version = "0.15.0", features = [
    "embassy",
    "embassy-time-timg0",
    "embassy-executor-thread",
    "embassy-executor-interrupt",
    "async",
] }
esp-backtrace = { version = "0.8.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.6.0", features = ["esp32", "log"] }
log = { version = "0.4.18" }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi/", features = [
    "esp32",
    "wifi-logs",
    "wifi",
    "embedded-svc",
    "embassy-net",
    "async",
] }
smoltcp = { version = "0.10.0", default-features = false, features = [
    "proto-igmp",
    "proto-ipv4",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "medium-ethernet",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
] }
embedded-svc = { version = "0.25.0", default-features = false, features = [] }
embedded-io = "0.5.0"
heapless = { version = "0.7.14", default-features = false }
embassy-time = { version = "0.1.3" }

# embedded-hal-async = { version = "=1.0.0-rc.1", optional = true }
embedded-io-async = { version = "0.5.0", optional = true }
embassy-executor = { version = "0.3.0", features = [
    "nightly",
    "executor-thread",
] }
embassy-sync = { version = "0.3.0", optional = true }
embassy-futures = { version = "0.1.0", optional = true }
static_cell = { version = "1.2.0", features = ["nightly"] }
