[package]
authors = ["Gergo"]
edition = "2021"
name = "esp_node"
version = "0.2.0"

[dependencies]
dotenvy_macro = "0.15.7"
embassy-executor = { version = "0.3.0", package = "embassy-executor", features = [
    "nightly",
    "executor-thread",
    "integrated-timers",
] }
embassy-futures = { version = "0.1.0", optional = true }
embassy-net = { version = "0.1.0", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet", "dns"] }
embassy-sync = { version = "0.3.0", optional = true }
embassy-time = { version = "0.1.3" }
embedded-io = "0.5.0"
embedded-svc = { version = "0.25.0", default-features = false, features = [] }
esp-alloc = "0.3.0"
esp-backtrace = { version = "0.8.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.6.0", features = ["esp32", "log"] }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi/", features = [
    "esp32",
    "async",
    "embassy-net",
    "embedded-svc",
    "wifi",
] }
hal = { package = "esp32-hal", version = "0.15.0", features = [
    "embassy",
    "embassy-time-timg0",
    "embassy-executor-thread",
    "embassy-executor-interrupt",
    "async",
] }
heapless = { version = "0.7.14", default-features = false }
log = { version = "0.4.18" }
static_cell = { version = "1.2.0", features = ["nightly"] }

embedded-tls = { version = "0.15", default-features = false, features = ["async"] }
reqwless = { git = "https://github.com/drogue-iot/reqwless" }


[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev]
lto = "off"
[profile.release]
lto = "off"
